tests/baselines/reference/badExternalModuleReference.errors.txt
tests/cases/compiler/badExternalModuleReference.ts(1,21): error TS2307: Cannot find module 'garbage'.


==== tests/cases/compiler/badExternalModuleReference.ts (1 errors) ====
    import a1 = require("garbage");
                        ~~~~~~~~~
!!! error TS2307: Cannot find module 'garbage'.
    export declare var a: {
        test1: a1.connectModule;
        (): a1.connectExport;
    };
    